feat: enhance script tasks with extra files (#5138)
* wip: added import of zip file in form

* changed 'zipFile' to hashmap

* added procedure for unpacking the file (when it can be found)

* added collecting zip file contents before ScriptTask creation

* fixed ZIP file writing

* fixed zipping and unzipping

* improved zip file writing

* reused the Scripts table for both queries

* enabled usage of other files than ZIP

* removed unnecessary boolean

* fixed case where extraFile has no extension

* prevented execution of script with file named 'script.py', 'requirements.txt', or 'venv.zip'

* fixed failing tests

* added check for null extraFile

* script table column update

* updated gradle build for test implementation

* created tests for Python with extra file

* fixed URL warning

* created variables for "extraFile" strings

* added test files

* set database init to true

* EXTRAFILE -> EXTRA_FILE

* fixed variable names

* linter fix

* added 'quiet' flag for Python package installation

* updated docs

* extracted ZIP file in Java instead of bash

* added zip slip capture

* added zip slip capture check on canonical path of new files